--- a/Project #2 Tanks.vcxproj.filters
+++ b/Project #2 Tanks.vcxproj.filters
@@ -30,10 +30,7 @@
     <ClCompile Include="Player.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="PlayerAmmo.cpp">
-      <Filter>Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="EnemyAmmo.cpp">
+    <ClCompile Include="Ammo.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -53,10 +50,7 @@
     <ClInclude Include="Player.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="PlayerAmmo.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
-    <ClInclude Include="EnemyAmmo.h">
+    <ClInclude Include="Ammo.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
